--- a/.env
+++ b/.env
@@ -23,9 +23,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=travelbabi
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u498564180_travel_db
+DB_USERNAME=u498564180_travel_user
+DB_PASSWORD="Travel2026#"
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
